Creado mediante Colaboratory

--- a/code/Sentiment_analysis/Logistic_regression.ipynb
+++ b/code/Sentiment_analysis/Logistic_regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Logistic_regression.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN4lWpQ22rY92GcYSUFG+7/",
+      "authorship_tag": "ABX9TyMeaxL9/3fIurHiQOatfi3X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "source": [
         "data = pd.read_csv('Dataset-with-sentiments.csv')"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -56,12 +56,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3YYdeLgDNZR4",
-        "outputId": "5bad5cbd-7735-47e2-d0b4-68b68911e323"
+        "outputId": "3601eb98-e9ac-4fc6-8547-414934267396"
       },
       "source": [
         "sum(data['stop_comments'].isnull())"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -71,7 +71,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -83,7 +83,7 @@
       "source": [
         "data = data[data['stop_comments'].notnull()]"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -93,12 +93,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SIba_zl2NgNB",
-        "outputId": "9aae63b0-ad88-48eb-faf8-b4af082b5bd1"
+        "outputId": "322f8cc8-feba-4cc1-f1ef-466206c3f09e"
       },
       "source": [
         "sum(data['stop_comments'].isnull())"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -108,7 +108,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -120,7 +120,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
       "source": [
         "X_train,X_test,y_train,y_test = train_test_split(data['stop_comments'],data['pol_cat'],test_size = 0.2,random_state = 324)"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -141,10 +141,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CMPCz52ANk6z",
-        "outputId": "0d0972af-4b09-4dbe-ca47-748e02521a20"
+        "outputId": "68b26f13-aab3-47f3-de7e-489e991dc416"
       },
       "source": [
         "X_train.shape"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(852,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XkXV9IW6Nmrd",
+        "outputId": "c5a8cd3f-516e-4d79-bd8e-76e6f6c89562"
+      },
+      "source": [
+        "X_test.shape"
       ],
       "execution_count": 9,
       "outputs": [
@@ -152,7 +178,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(852,)"
+              "(213,)"
             ]
           },
           "metadata": {},
@@ -166,39 +192,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "XkXV9IW6Nmrd",
-        "outputId": "33b3ee2f-98e9-45a2-f8a6-3a4c321e70f0"
-      },
-      "source": [
-        "X_test.shape"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(213,)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "AIAcoHwYNod6",
-        "outputId": "da78eec7-ae7d-443e-f509-a653da625bd5"
+        "outputId": "75df79e7-e3e7-4b88-ccc9-a153769d1944"
       },
       "source": [
         "data['pol_cat'].value_counts()"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +210,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -231,7 +231,7 @@
       "source": [
         "from sklearn.feature_extraction.text import CountVectorizer"
       ],
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "tf_train = vect.fit_transform(X_train)\n",
         "tf_test = vect.transform(X_test)"
       ],
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -255,12 +255,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tipNaNdHPB9e",
-        "outputId": "e9af7d5a-c71d-4f90-d2fa-736b62bf1157"
+        "outputId": "8473511d-155a-49d6-a81b-da069aa0945e"
       },
       "source": [
         "tf_train"
       ],
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,6 +268,38 @@
             "text/plain": [
               "<852x2434 sparse matrix of type '<class 'numpy.int64'>'\n",
               "\twith 8908 stored elements in Compressed Sparse Row format>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cajxhm3ag00d",
+        "outputId": "1af63275-8015-4e96-fd01-098bf4b00d6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf_train.toarray()"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0, ..., 0, 0, 0],\n",
+              "       [0, 0, 0, ..., 0, 0, 0],\n",
+              "       [0, 0, 0, ..., 0, 0, 0],\n",
+              "       ...,\n",
+              "       [0, 0, 0, ..., 0, 0, 0],\n",
+              "       [0, 0, 0, ..., 0, 0, 0],\n",
+              "       [0, 0, 0, ..., 0, 0, 0]])"
             ]
           },
           "metadata": {},
@@ -282,7 +314,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BeCfNr6tPIyE",
-        "outputId": "a7c9d4f6-72d2-4a51-ffb9-29424a2ad510"
+        "outputId": "aaa07ef2-902a-4bbb-81e8-3da9a06117fc"
       },
       "source": [
         "tf_train.shape"
@@ -317,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IfF_OxHFPLs9",
-        "outputId": "672d8341-74e9-4be4-d5f4-01055809e13e"
+        "outputId": "576cddef-7594-4d72-f54f-8fa0f95cfcd2"
       },
       "source": [
         "print(vect.vocabulary_)"
@@ -351,7 +383,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y3D1zMx5PfuB",
-        "outputId": "10d8b285-5989-4aa5-da43-d35c5b148d90"
+        "outputId": "2ea8cb5b-63fb-4567-e5e7-d45dbba322ea"
       },
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
@@ -392,7 +424,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EzKEEqrwPhW2",
-        "outputId": "2a22585e-967b-40f6-8037-ff83123e3dd1"
+        "outputId": "e0224fe5-1a1a-49e7-89ec-0d7db73b0607"
       },
       "source": [
         "lr.score(tf_train,y_train)"
@@ -427,7 +459,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t5FFTb6CPo-j",
-        "outputId": "00827ac7-4df9-4f8e-b980-5f75cf999893"
+        "outputId": "64bd4b49-c9b5-4fdd-ade1-f6fc0bd6a43e"
       },
       "source": [
         "lr.score(tf_test,y_test)"
@@ -488,7 +520,7 @@
         "\n",
         "from sklearn import metrics"
       ],
-      "execution_count": 26,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -498,28 +530,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y2wCHWyMP4Mk",
-        "outputId": "cc865495-33ad-4d8b-8bc6-8077cf9d10d8"
+        "outputId": "31dad73e-e981-404b-be0d-3940f4d21a35"
       },
       "source": [
         "pip install mlxtend"
       ],
-      "execution_count": 27,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Requirement already satisfied: mlxtend in /usr/local/lib/python3.7/dist-packages (0.14.0)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from mlxtend) (57.4.0)\n",
-            "Requirement already satisfied: scikit-learn>=0.18 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (0.22.2.post1)\n",
             "Requirement already satisfied: pandas>=0.17.1 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (1.1.5)\n",
             "Requirement already satisfied: scipy>=0.17 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (1.4.1)\n",
             "Requirement already satisfied: matplotlib>=1.5.1 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (3.2.2)\n",
             "Requirement already satisfied: numpy>=1.10.4 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (1.19.5)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (1.3.2)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (2.4.7)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (0.11.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from mlxtend) (57.4.0)\n",
+            "Requirement already satisfied: scikit-learn>=0.18 in /usr/local/lib/python3.7/dist-packages (from mlxtend) (0.22.2.post1)\n",
             "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (2.8.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (0.11.0)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (2.4.7)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=1.5.1->mlxtend) (1.3.2)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.17.1->mlxtend) (2018.9)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib>=1.5.1->mlxtend) (1.15.0)\n",
             "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.18->mlxtend) (1.1.0)\n"
@@ -535,7 +567,7 @@
           "height": 313
         },
         "id": "tsjb9fGxP6TR",
-        "outputId": "3f0fcfe9-d0d6-4c0c-a308-2c8863ac3953"
+        "outputId": "cd396152-84cd-44de-8a31-cc1b93bad131"
       },
       "source": [
         "cf = metrics.confusion_matrix(expected,predicted,labels = [1,-1])\n",
@@ -548,7 +580,7 @@
         "# fig, ax = plot_confusion_matrix(conf_mat = cf, class_names = [1,-1])\n",
         "plt.show()"
       ],
-      "execution_count": 28,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,14 +611,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mvyyqJu5QEg3",
-        "outputId": "c5df431d-245d-4882-e0a4-d988c3ac00c5"
+        "outputId": "8cf1745a-3c27-46a6-de47-7d4506f9ecc0"
       },
       "source": [
         "from sklearn import metrics\n",
         "print(metrics.classification_report(expected, predicted))\n",
         "# print(metrics.confusion_matrix(expected,predicted))"
       ],
-      "execution_count": 29,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,13 +653,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V_V3UiHrQQwq",
-        "outputId": "61e9c1f6-1993-436f-9f24-e80d90cb5282"
+        "outputId": "10189d84-d19a-4919-e497-84f11e195a3c"
       },
       "source": [
         "from sklearn.metrics import f1_score\n",
         "f1_score(expected, predicted, average='macro')"
       ],
-      "execution_count": 30,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -637,7 +669,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 27
         }
       ]
     },
@@ -649,7 +681,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     }
   ]
