Creado mediante Colaboratory

--- a/code/Sentiment_analysis/Our_Logistic_regression.ipynb
+++ b/code/Sentiment_analysis/Our_Logistic_regression.ipynb
@@ -6,7 +6,7 @@
       "name": "Our_Logistic_regression.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO7MTWjlAam1OwGh+WjcKPE",
+      "authorship_tag": "ABX9TyNJ9SPn7QxuVJe1LKs5GmzE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -44,16 +44,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 408
+          "height": 255
         },
         "id": "sOc_oI2WKASW",
-        "outputId": "85d650d1-d614-4438-df34-69e184ce8c8a"
+        "outputId": "977c6fd9-2192-46af-9905-7de68fb44817"
       },
       "source": [
         "data = pd.read_csv('Dataset-with-sentiments.csv')\n",
         "data.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +153,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -165,7 +165,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -187,7 +187,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -197,12 +197,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mpRMqsFCXsmq",
-        "outputId": "456d46e8-d7b8-4363-89ba-84236e4e93ba"
+        "outputId": "bbb1d269-da6e-462c-8f7b-15ca814f5bc3"
       },
       "source": [
         "sum(data['stop_comments'].isnull())\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -224,7 +224,7 @@
       "source": [
         "data = data[data['stop_comments'].notnull()]"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -234,12 +234,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X47G8LtaXsqa",
-        "outputId": "ede80e1c-2f38-4219-b144-79956180ae99"
+        "outputId": "1b2ff99c-eab4-4f06-8402-f33a5e89aba4"
       },
       "source": [
         "sum(data['stop_comments'].isnull())"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +249,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -261,7 +261,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -282,12 +282,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s3j4DacKXssL",
-        "outputId": "0125bdff-f2b3-4bf9-806b-cda0ea9be8ae"
+        "outputId": "a641ddb7-6bff-4609-d685-284bd32b909a"
       },
       "source": [
         "data['pol_cat']"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +308,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -320,7 +320,7 @@
       "source": [
         "data[data['pol_cat']==-1] = 0"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -330,12 +330,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qVmBbynlkbt5",
-        "outputId": "121293cf-60b9-474d-9459-3afcec544e2a"
+        "outputId": "e226619c-1922-4447-abae-193b04811c4b"
       },
       "source": [
         "data['pol_cat']"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,7 +356,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -368,7 +368,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -378,12 +378,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5JrH_VwMlY2C",
-        "outputId": "2e497017-3678-4405-8056-cd78ac2b5dee"
+        "outputId": "be658b33-8503-473e-9d2b-029e292aa0a1"
       },
       "source": [
         "data.info()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +415,7 @@
       "source": [
         "data['stop_comments'] = data[['stop_comments']].astype(str)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -426,7 +426,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -437,7 +437,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -448,7 +448,7 @@
       "source": [
         "X_train,X_test,y_train,y_test = train_test_split(data['stop_comments'],data['pol_cat'],test_size = 0.2,random_state = 324)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -459,7 +459,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -473,7 +473,7 @@
         "tf_train = vect.fit_transform(X_train)\n",
         "tf_test = vect.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -485,7 +485,7 @@
         "tf_train = tf_train.toarray()\n",
         "tf_test = tf_test.toarray()"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -549,7 +549,80 @@
         "        Y = np.where( Z > 0.5, 1, 0 )        \n",
         "        return Y\n"
       ],
-      "execution_count": null,
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MNNGiSaxpuCt"
+      },
+      "source": [
+        "## Using median intead of mean"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NW6Prn19ptPx"
+      },
+      "source": [
+        "# Importing libraries\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import warnings\n",
+        "warnings.filterwarnings( \"ignore\" )\n",
+        "\n",
+        "# to compare our model's accuracy with sklearn model\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "# Logistic Regression\n",
+        "class LogitRegression() :\n",
+        "    def __init__( self, learning_rate, iterations ) :        \n",
+        "        self.learning_rate = learning_rate        \n",
+        "        self.iterations = iterations\n",
+        "          \n",
+        "    # Function for model training    \n",
+        "    def fit( self, X, Y ) :        \n",
+        "        # no_of_training_examples, no_of_features        \n",
+        "        self.m, self.n = X.shape        \n",
+        "        # weight initialization        \n",
+        "        self.W = np.zeros( self.n )        \n",
+        "        self.b = 0        \n",
+        "        self.X = X        \n",
+        "        self.Y = Y\n",
+        "          \n",
+        "        # gradient descent learning\n",
+        "                  \n",
+        "        for i in range( self.iterations ) :            \n",
+        "            self.update_weights()            \n",
+        "        return self\n",
+        "      \n",
+        "    # Helper function to update weights in gradient descent\n",
+        "      \n",
+        "    def update_weights( self ) :           \n",
+        "        A = 1 / ( 1 + np.exp( - ( self.X.dot( self.W ) + self.b ) ) )\n",
+        "          \n",
+        "        # calculate gradients        \n",
+        "        tmp = ( A - self.Y.T )        \n",
+        "        tmp = np.reshape( tmp, self.m )        \n",
+        "        dW = np.dot( self.X.T, tmp ) / self.m\n",
+        "        db = np.median( tmp )\n",
+        "          \n",
+        "        # update weights    \n",
+        "        self.W = self.W - self.learning_rate * dW    \n",
+        "        self.b = self.b - self.learning_rate * db\n",
+        "          \n",
+        "        return self\n",
+        "      \n",
+        "    # Hypothetical function  h( x ) \n",
+        "      \n",
+        "    def predict( self, X ) :    \n",
+        "        Z = 1 / ( 1 + np.exp( - ( X.dot( self.W ) + self.b ) ) )        \n",
+        "        Y = np.where( Z > 0.5, 1, 0 )        \n",
+        "        return Y"
+      ],
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -559,7 +632,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Oa_AzkcZEoM",
-        "outputId": "227c6e82-a3c6-40be-8011-f3e436675d42"
+        "outputId": "64ab412f-5c9a-41bb-c0c2-4c8cc0e73759"
       },
       "source": [
         "# Driver code\n",
@@ -614,15 +687,14 @@
         "if __name__ == \"__main__\" :     \n",
         "    main()"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'C': 1.0, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 100, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': None, 'solver': 'lbfgs', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n",
-            "Accuracy on test set by our model       :   88.26291079812206\n",
-            "Accuracy on test set by sklearn model   :   81.2206572769953\n"
+            "Accuracy on test set by our model       :   92.95774647887323\n",
+            "Accuracy on test set by sklearn model   :   92.01877934272301\n"
           ]
         }
       ]
