Creado mediante Colaboratory

--- a/code/Sentiment_analysis/All_videos/Concat_datasets.ipynb
+++ b/code/Sentiment_analysis/All_videos/Concat_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Concat_datasets.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPzeMgK1jbOxlGilFsS9ND1",
+      "authorship_tag": "ABX9TyP7UCXGPT+CBjdmQbqEOoX8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "\n",
         "new_df = pd.concat([df1, df2])\n",
         "\n",
-        "new_df.to_csv('Dataset-with-sentiments.csv')\n",
+        "new_df.to_csv('Dataset-with-sentiments.csv', index=False)\n",
         "\n"
       ],
       "execution_count": 2,
