--- a/code/Sentiment_analysis/Logistic_regression_new_videos.ipynb
+++ b/code/Sentiment_analysis/Logistic_regression_new_videos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Logistic_regression.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMmgfv0cT+R3WjUh4OcfZmD",
+      "authorship_tag": "ABX9TyP4UySYDrHhwWCUNC3NMsJa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1103,6 +1103,251 @@
           "execution_count": 184
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9qlT2nx52nF6"
+      },
+      "source": [
+        "# **Now we are going to study the impact of the video**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t_d5mCeD25A3"
+      },
+      "source": [
+        "predicted[predicted==0] = -1"
+      ],
+      "execution_count": 185,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tBd3JZmf3JCz",
+        "outputId": "f0fdc049-ffd3-48b5-cf8b-55a8d3dbd381",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "predicted"
+      ],
+      "execution_count": 186,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-1, -1,  1, ..., -1, -1,  1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 186
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FzCTQLPk3LA1",
+        "outputId": "dbb7180d-056c-4504-8f39-4768dd168b96",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "likes = np.array(list(data_test['Likes']))\n",
+        "likes"
+      ],
+      "execution_count": 190,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 0, 3, ..., 0, 0, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 190
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e451Jg123QR0",
+        "outputId": "7fdec0eb-6974-424e-e225-861e6021853e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "ponderacion = np.dot(predicted, likes)\n",
+        "ponderacion"
+      ],
+      "execution_count": 192,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "132662"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 192
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pE-O4sGW3spj",
+        "outputId": "cf1f538a-b67a-4651-e419-950877e3ca36",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "num_comentarios_pos = sum(predicted[predicted==1])\n",
+        "num_comentarios_pos"
+      ],
+      "execution_count": 194,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "787"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 194
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A4RifxD85SV0",
+        "outputId": "98103781-eeff-44a4-e518-f861f6ec5a58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "num_com_num_likes = sum(predicted[predicted==1])*sum(likes[predicted==1])\n",
+        "num_com_num_likes"
+      ],
+      "execution_count": 198,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "316756482"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 198
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mCC03TnU5SYS",
+        "outputId": "5044d898-2839-44b5-f949-a6287974bb37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "num_com = len(predicted)\n",
+        "num_com"
+      ],
+      "execution_count": 199,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1505"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 199
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iJDeAalb-x1c",
+        "outputId": "76b98f35-24b6-4511-b7e0-607b93b7bde7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "num_likes = sum(likes)\n",
+        "num_likes"
+      ],
+      "execution_count": 200,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "672310"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 200
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "upfHiy5S_MNd",
+        "outputId": "2e16d3f6-f9fa-4cad-823e-c13286d2b2f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "(num_comentarios_pos + num_likes)/(num_com + num_likes)"
+      ],
+      "execution_count": 201,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9989344256212759"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 201
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2MwGx52H_TiY"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
