Creado mediante Colaboratory

--- a/code/Sentiment_analysis/SVM.ipynb
+++ b/code/Sentiment_analysis/SVM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SVM.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOOyEmBzgMuOkyNpijWxxTO",
+      "authorship_tag": "ABX9TyM1tP/PUYdiUyO/fB4mUy0E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,7 +231,7 @@
         "id": "DXsyy6SaNvDU"
       },
       "source": [
-        "## **Gonna Apply Logistic Regression**"
+        "## **Gonna Apply SVM**"
       ]
     },
     {
