Creado mediante Colaboratory

--- a/code/Extract_and_preprocess/Extract-Clean-YouTube-Comments.ipynb
+++ b/code/Extract_and_preprocess/Extract-Clean-YouTube-Comments.ipynb
@@ -502,27 +502,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D8YvyE5dDgb-",
-        "outputId": "5e5f23f9-4e53-42df-d377-8e034b600fb9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "D8YvyE5dDgb-",
+        "outputId": "a49537c8-8abb-44c7-96c9-7c16212dcd16"
       },
       "source": [
         "#response['statistics']\n",
         "aux = response['items']\n",
+        "vistas = aux[0]['statistics']['viewCount']\n",
         "likes = aux[0]['statistics']['likeCount']\n",
         "dislikes = aux[0]['statistics']['dislikeCount']\n",
         "\n",
-        "print(likes, dislikes)"
+        "print(vistas, likes, dislikes)"
       ],
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "13626143 397679\n"
+            "3121775747 13626143 397679\n"
           ]
         }
       ]
