Creado mediante Colaboratory

--- a/code/Sentiment_analysis/SVM.ipynb
+++ b/code/Sentiment_analysis/SVM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SVM.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMsVAE4DRLz2qhUZebBkLTs",
+      "authorship_tag": "ABX9TyPeIxjjsLywSyjsWFjqzVd7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -987,11 +987,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5FqQXYKW_LfI",
-        "outputId": "3cd1688d-3617-48e6-d856-3084ce76e741",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5FqQXYKW_LfI",
+        "outputId": "3cd1688d-3617-48e6-d856-3084ce76e741"
       },
       "source": [
         "num_likes_positivos = sum(likes[predicted==1])\n",
@@ -1014,11 +1014,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "otQ8vu3p-8Eb",
-        "outputId": "84edae75-3563-4aa4-91c9-ecb71d8e9166",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "otQ8vu3p-8Eb",
+        "outputId": "84edae75-3563-4aa4-91c9-ecb71d8e9166"
       },
       "source": [
         "impacto = (num_comentarios_pos + num_likes_positivos)/(len(predicted) + sum(likes))\n",
@@ -1054,11 +1054,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mUFZ9DCX-8HU",
-        "outputId": "0dd3e39c-d2f8-4963-b5c7-340edddcc713",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mUFZ9DCX-8HU",
+        "outputId": "0dd3e39c-d2f8-4963-b5c7-340edddcc713"
       },
       "source": [
         "popularidad = likes_video/(likes_video + dislikes_video)\n",
@@ -1081,27 +1081,76 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "GB1xvvAQHwBy",
+        "outputId": "cb225562-9ec9-4394-bdf6-01cba9cc86b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "P7KSIai63Isy",
-        "outputId": "b6b54c3b-6009-4651-aa97-0c2fa22a8882"
+        }
       },
       "source": [
-        "relevancia = (likes_video + dislikes_video)/vistas\n",
-        "relevancia"
+        "skore = 2 / (1/impacto + 1/popularidad)\n",
+        "skore"
       ],
-      "execution_count": 320,
+      "execution_count": 324,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.0044922579764023005"
+              "0.6884497640023362"
             ]
           },
           "metadata": {},
-          "execution_count": 320
+          "execution_count": 324
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ikMyQVzBHwFV"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7dzFtNyFHwIj"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P7KSIai63Isy",
+        "outputId": "0befd60b-31e8-461b-bc70-428f5e36548b"
+      },
+      "source": [
+        "relevancia = (dislikes_video)/(len(predicted) + sum(likes))\n",
+        "relevancia"
+      ],
+      "execution_count": 322,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5901901857334728"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 322
         }
       ]
     },
